metadata/force-app/main/default/objects/Tanya55__c/Tanya55__c.object-meta.xml
<CustomObject>
    <description>edited</description>
    <label>Tanya55</label>
    <nameField>
        <label>Tanya55 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tanya55</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>