metadata/force-app/main/default/objects/Tanya55__c/fields/AAA__c.field-meta.xml
<CustomField>
    <fullName>AAA__c</fullName>
    <description>edited</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tanya55</relationshipLabel>
    <relationshipName>Tanya55</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>