metadata/force-app/main/default/objects/Tanya55__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>edited</description>
    <label>Account</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tanya55</relationshipLabel>
    <relationshipName>Tanya551</relationshipName>
    <type>Lookup</type>
</CustomField>