metadata/force-app/main/default/objects/Tanya55__c/fields/AN__c.field-meta.xml
<CustomField>
    <fullName>AN__c</fullName>
    <description>edited</description>
    <label>AN</label>
    <type>AutoNumber</type>
</CustomField>