metadata/force-app/main/default/objects/Tanya55__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <description>edited</description>
    <label>DateTime</label>
    <type>DateTime</type>
</CustomField>