metadata/force-app/main/default/objects/Tanya55__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>edited</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>