metadata/force-app/main/default/objects/Tanya55__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <description>editededited</description>
    <label>Field1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>