metadata/force-app/main/default/objects/Tanya55__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <description>edited</description>
    <formula>Checkbox__c = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula</label>
    <type>Checkbox</type>
</CustomField>