metadata/force-app/main/default/objects/Tanya55__c/fields/Multiselect_picklist__c.field-meta.xml
<CustomField>
    <fullName>Multiselect_picklist__c</fullName>
    <description>edited</description>
    <label>Multiselect picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tanya55</valueSetName>
    </valueSet>
</CustomField>