metadata/force-app/main/default/objects/Tanya55__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>edited</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>