metadata/force-app/main/default/objects/Tanya55__c/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <description>edited</description>
    <label>Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tanya55</valueSetName>
    </valueSet>
</CustomField>