metadata/force-app/main/default/objects/Tanya55__c/fields/Text_Area_Long__c.field-meta.xml
<CustomField>
    <fullName>Text_Area_Long__c</fullName>
    <description>edited</description>
    <label>Text Area Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>