metadata/force-app/main/default/objects/Tanya55__c/fields/Text_Area_Rich__c.field-meta.xml
<CustomField>
    <fullName>Text_Area_Rich__c</fullName>
    <description>edited</description>
    <label>Text Area Rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>