metadata/force-app/main/default/objects/Tanya55__c/fields/TExt_encrypted__c.field-meta.xml
<CustomField>
    <fullName>TExt_encrypted__c</fullName>
    <description>edited</description>
    <label>TExt encrypted</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>