metadata/force-app/main/default/objects/Tanya55__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>edited</description>
    <label>Time</label>
    <type>Time</type>
</CustomField>