metadata/force-app/main/default/objects/Tanya55__c/recordTypes/RT1.recordType-meta.xml
<RecordType>
    <fullName>RT1</fullName>
    <active>true</active>
    <description>edited</description>
    <label>RT1</label>
</RecordType>