metadata/force-app/main/default/objects/Tanya55__c/validationRules/VR1.validationRule-meta.xml
<ValidationRule>
    <fullName>VR1</fullName>
    <active>true</active>
    <description>edited</description>
    <errorConditionFormula>Name = &apos;abc&apos;</errorConditionFormula>
    <errorMessage>error!</errorMessage>
</ValidationRule>