metadata/force-app/main/default/objects/Tanya55__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>